--- a/VIT_101/notebooks/dat-utils.ipynb
+++ b/VIT_101/notebooks/dat-utils.ipynb
@@ -80,6 +80,118 @@
     "model_state_dict_keyset = set(model.state_dict().keys())\n",
     "model_state_dict_keyset.difference(new_state_dict_keyset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2b3bbb3-c1f3-4f8d-ade8-ee42d236484f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(torch.sum(last_stage_attention))\n",
+    "# print(torch.sum(last_stage_attention, dim=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a87cfe-f0f9-4e44-a58d-ebc8bf2f7cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i, attn_i in enumerate(output_attns):\n",
+    "#     top_scores, _ = torch.sort(attn_i.flatten(), descending=True)\n",
+    "#     print(i, f\"{top_scores}\") #  : .4f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25020813-35ce-49cd-aa9d-674e39319bc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def calculate_cumulative_attention(attentions):    \n",
+    "#     cumulative_attentions = []\n",
+    "#     if len(attentions) > 0:\n",
+    "#         def process_attention(attn):\n",
+    "#             nheads, npatches, _ = attn.shape\n",
+    "#             normalized_attn = F.softmax(attn.sum(dim =0), dim=1)\n",
+    "#             h = int(npatches **0.5)\n",
+    "#             normalized_attn = normalized_attn.reshape(h, h, -1)\n",
+    "#             return normalized_attn\n",
+    "\n",
+    "#         def scale_attention(attn, feat_size, nheads):\n",
+    "#             attn = attn.unsqueeze(0)\n",
+    "#             if((attn.shape[0] == feat_size) and (attn.shape[1] == feat_size)):\n",
+    "#                 scaled_attn = attn\n",
+    "#             else:\n",
+    "#                 attn = einops.rearrange(attn, 'bs h w k -> bs k h w')\n",
+    "#                 scaled_attn = F.interpolate(attn, (feat_size, feat_size), \n",
+    "#                                           mode='bilinear', align_corners=True)\n",
+    "#             scaled_attn = einops.rearrange(scaled_attn, 'bs k h w -> bs (h w) k')\n",
+    "#             scaled_attn = scaled_attn.expand(nheads, -1, -1)\n",
+    "#             return scaled_attn\n",
+    "\n",
+    "#         # start from last stage\n",
+    "#         cumulative_attentions.append(attentions[-1])\n",
+    "#         for i in range(1, len(attentions)):\n",
+    "#             prev_attn = cumulative_attentions[-1]\n",
+    "#             prev_attn = process_attention(prev_attn)\n",
+    "            \n",
+    "#             current_attn = attentions[len(attentions) - i - 1]\n",
+    "#             nheads, npatches, _ = current_attn.shape\n",
+    "#             curr_feat_size = int(npatches ** 0.5)\n",
+    "#             scaled_prev_attn = scale_attention(prev_attn, curr_feat_size, nheads)\n",
+    "#             current_attn = current_attn * scaled_prev_attn\n",
+    "#             current_attn = F.softmax(current_attn, dim=2)\n",
+    "#             cumulative_attentions.append(current_attn)\n",
+    "\n",
+    "#     # we stored in reverse order\n",
+    "#     cumulative_attentions = cumulative_attentions[::-1]\n",
+    "#     return cumulative_attentions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f609c5c0-01cd-40f1-aa0d-a957d71a09a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cumulative_attn = calculate_cumulative_attention(output_attns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d1bd96b-b999-4221-a05b-2655d2c68e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i, attn_i in enumerate(cumulative_attn):\n",
+    "#     top_scores, _ = torch.sort(attn_i.flatten(), descending=True)\n",
+    "#     print(i, f\"{top_scores}\") #  : .4f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a39229a-1f4a-4001-aeb7-b2e450d96b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take current attention map = [nh_o np_o 49]\n",
+    "# interpolate pre attn map to current resolution = [np_o 49]\n",
+    "# repeat scaled map to nh_o = [nh_o np_o 49]\n",
+    "# apply softmax across 49 = [nh_o np_o 49]\n",
+    "# set current stage to previous_stage            \n",
+    "\n",
+    "# prev stage attention = [nh, np, 49]\n",
+    "# sum across heads = [np, 49]\n",
+    "# normalize against 49 = [np, 49]\n",
+    "# reshape to height, width = [hi wi 49]"
+   ]
   }
  ],
  "metadata": {
