--- a/End_to_End_Autonomous_Driving/notebooks/transfuser-cpu.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/transfuser-cpu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:52:19.763101Z",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:54:45.243248Z",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:54:48.018516Z",
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:00<00:00, 93.09it/s]\n",
-      "100%|██████████| 20/20 [00:00<00:00, 191.15it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 94.19it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 197.23it/s]\n",
       "There are 1954 samples in training set, 1783 samples in validation set \n"
      ]
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:54:54.367968Z",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:54:56.018140Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3193,7 +3193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3242,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3269,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3294,7 +3294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3339,7 +3339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3397,8 +3397,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The feature maps from backbones can be pretty large, and computing attention b/w entire lidar and image maps can be expensive, particularly, when using vanilla self-attention\n",
+    "- Hence, we downscale them to a lesser resolution, before passing to transformer modules\n",
+    "- We'll make use of **Average Pooling** modules, for downscaling feature maps from backbones"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avgpool_img = nn.AdaptiveAvgPool2d((5, 22))\n",
+    "avgpool_lidar = nn.AdaptiveAvgPool2d((8, 8))\n",
+    "\n",
+    "# downscale the feature maps\n",
+    "image_layer1_feature = avgpool_img(image_features)\n",
+    "lidar_layer1_feature = avgpool_lidar(lidar_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3411,30 +3434,124 @@
     }
    ],
    "source": [
-    "test_image_layer1_feature = torch.randn((1, 72, 5, 22))\n",
-    "test_lidar_layer1_feature = torch.randn((1, 72, 8, 8))\n",
-    "\n",
     "transformer_module = GPT(n_embd=72, n_head=4, block_exp=4, n_layer=4,\n",
     "                         img_vert_anchors =5, img_horz_anchors=22,\n",
     "                         lidar_vert_anchors=8, lidar_horz_anchors=8, \n",
     "                         embd_pdrop=0.1, attn_pdrop=0.1, resid_pdrop=0.1)\n",
-    "fused_image_features, fused_lidar_features = transformer_module(test_image_layer1_feature, test_lidar_layer1_feature)\n",
+    "fused_image_features, fused_lidar_features = transformer_module(image_layer1_feature, lidar_layer1_feature)\n",
     "print(f\"Transformer output Fused Image features = {fused_image_features.shape}\")\n",
     "print(f\"Transformer output Fused Lidar features = {fused_lidar_features.shape}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**NOTE**: \n",
+    "- Lidar layer1 output shape = (1, 72, 64, 64)\n",
+    "- Fused Lidar layer1 transformer output shape = (1, 72, 8, 8)\n",
+    "- Image layer1 output shape = (1, 72, 40, 176)\n",
+    "- Fused Image layer1 transformer output shape = (1, 72, 5, 22)\n",
+    "\n",
+    "Apart from fusing lidar and camera images using Transformer blocks, we can add `Residual` connections b/w the original layer1 output and the fused output for each modality. This is similar to **Multi-scale fusion using FPN**\n",
+    "\n",
+    "Idea is to upsample the fused output using bilinear interpolation and add it to original output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image features shape after layer1 fusion = torch.Size([1, 72, 40, 176])\n",
+      "Lidar features shape after layer1 fusion = torch.Size([1, 72, 64, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_features_layer1 = F.interpolate(fused_image_features, size=(image_features.shape[2],image_features.shape[3]), mode='bilinear', align_corners=False)\n",
+    "lidar_features_layer1 = F.interpolate(fused_lidar_features, size=(lidar_features.shape[2],lidar_features.shape[3]), mode='bilinear', align_corners=False)\n",
+    "image_features = image_features + image_features_layer1\n",
+    "lidar_features = lidar_features + lidar_features_layer1\n",
+    "\n",
+    "print(f\"Image features shape after layer1 fusion = {image_features.shape}\")\n",
+    "print(f\"Lidar features shape after layer1 fusion = {lidar_features.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above feature extraction and fusion b/w lidar and image data is repeated 4 times (4 layers) in the same manner. The output shapes at each layer are as follows:\n",
+    "\n",
+    "- | Layer  | Lidar feature shape | Image feature shape |\n",
+    "- | Layer1 | (1, 72, 64, 64) | (1, 72, 40, 176) |\n",
+    "- | Layer2 | (1, 216, 32, 32) | (1, 216, 20, 88) |\n",
+    "- | Layer3 | (1, 576, 16, 16) | (1, 576, 10, 44) |\n",
+    "- | Layer4 | (1, 1512, 8,   8) | (1, 1512, 5, 22) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have a small final piece of fusion module, that represents all that the network has learnt, from the sensor inputs. We need to combine the lidar and image feature maps from the last layer, to be passed on to the planning module. We'll use the following steps:\n",
+    "- Use 1x1 convolutions to reduce the channel dimension\n",
+    "- Reduce the spatial dimension using AdaptiveAveragePooling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lidar features shape = torch.Size([1, 512]), Image features shape = torch.Size([1, 512])\n",
+      "Fused features shape = torch.Size([1, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_layer4_image_output = torch.randn(1, 1512, 5, 22)\n",
+    "test_layer4_lidar_output = torch.randn(1, 1512, 8, 8)\n",
+    "\n",
+    "# reduce channel dimension\n",
+    "final_image_conv = nn.Conv2d(1512, 512, kernel_size=1, padding=0)\n",
+    "final_lidar_conv = nn.Conv2d(1512, 512, kernel_size=1, padding=0)\n",
+    "image_features = final_image_conv(test_layer4_image_output)\n",
+    "lidar_features = final_lidar_conv(test_layer4_lidar_output)\n",
+    "\n",
+    "# reduce spatial dimension, we'll use the pooling \n",
+    "# layers from image and lidar encoder networks\n",
+    "image_features = image_encoder.features.global_pool(image_features)\n",
+    "image_features = torch.flatten(image_features, 1)\n",
+    "\n",
+    "lidar_features = lidar_encoder._model.global_pool(lidar_features)\n",
+    "lidar_features = torch.flatten(lidar_features, 1)\n",
+    "fused_features = image_features + lidar_features\n",
+    "print(f\"Lidar features shape = {lidar_features.shape}, Image features shape = {image_features.shape}\")\n",
+    "print(f\"Fused features shape = {fused_features.shape}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Planning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ADD image"
    ]
   },
   {
@@ -3456,7 +3573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3468,19 +3585,88 @@
     "                    nn.ReLU(inplace=True),\n",
     "                    nn.Linear(128, 64),\n",
     "                    nn.ReLU(inplace=True),\n",
-    "                ).to(device)\n",
+    "                )\n",
     "\n",
     "# input = (prev_points, target_point)\n",
-    "decoder = nn.GRUCell(input_size=4, hidden_size=).to(device)\n",
-    "output = nn.Linear(64, 3).to(device)"
+    "decoder = nn.GRUCell(input_size=4, hidden_size=64)\n",
+    "\n",
+    "# output projection layer\n",
+    "output = nn.Linear(64, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_planning_input = torch.randn(1,512)\n",
+    "target_point = torch.randn(1,2)\n",
+    "bs = test_planning_input.shape[0]\n",
+    "\n",
+    "# number of future trajectory points, \n",
+    "# we want to predict w.r.t vehicle\n",
+    "num_steps = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 4, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = proj1(test_planning_input)\n",
+    "\n",
+    "output_wp = list()\n",
+    "\n",
+    "# initial input variable to GRU\n",
+    "x = torch.zeros(size=(bs, 2), dtype=z.dtype)\n",
+    "\n",
+    "# autoregressive generation of output waypoints\n",
+    "for _ in range(num_steps):\n",
+    "    x_in = torch.cat([x, target_point], dim=1)\n",
+    "    z = decoder(x_in, z)\n",
+    "    dx = output(z)\n",
+    "    x = dx[:,:2] + x\n",
+    "    output_wp.append(x[:,:2])\n",
+    "\n",
+    "pred_wp = torch.stack(output_wp, dim=1)\n",
+    "print(pred_wp.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the predicted trajectory, we can compute the loss. Commonly used loss functions include **Smooth L1 Loss, L1 Loss, L2 loss and weighted averages of these**. We'll use the L1 Loss function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1 loss b/w predicted and actual trajectory =  0.9446\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_ego_waypoint = torch.randn(1, num_steps, 2)\n",
+    "loss_wp = torch.mean(torch.abs(pred_wp - test_ego_waypoint))\n",
+    "print(f\"L1 loss b/w predicted and actual trajectory = {loss_wp.item() : 0.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3493,7 +3679,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The above modules form the crux of the `Transfuser` model, which is executed during inference. Experiments have shown model convergence and performance to improve, with addition of auxilary tasks, during training. In this model, authors have used\n",
+    "- 3D Object detection\n",
+    "- Depth estimation\n",
+    "- Semantic Segmentation\n",
+    "- HD Map prediction (in BEV space)\n",
+    "\n",
+    "as auxillary tasks. These many tasks were possible, due to training data being generated from CARLA simulator. All these might not be possible in real life datasets, due to practical difficulties, but it definitely helps to have such tasks\n",
+    "\n",
+    "**NOTE**: \n",
+    "- The last layer image and lidar feature maps are used as input for each of these tasks (akin to different heads in Hydranet)\n",
+    "- The losses from each of auxilary tasks are combined with main loss (L1 on waypoint prediction) using weighted average. The weights are hyperparameters for the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Putting it together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total trainable parameters:  168018327\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\") \n",
+    "\n",
+    "from model import LidarCenterNet\n",
+    "model = LidarCenterNet(config, device, config.backbone, image_architecture='regnety_032', \n",
+    "                           lidar_architecture='regnety_032', use_velocity=False)\n",
+    "model.to(device);\n",
+    "\n",
+    "model_parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
+    "params = sum([np.prod(p.size()) for p in model_parameters])\n",
+    "print ('Total trainable parameters: ', params)"
    ]
   },
   {
@@ -3505,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-29T02:54:59.754588Z",
@@ -3582,43 +3811,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-04-29T02:55:01.238162Z",
-     "iopub.status.busy": "2024-04-29T02:55:01.237747Z",
-     "iopub.status.idle": "2024-04-29T02:55:10.187703Z",
-     "shell.execute_reply": "2024-04-29T02:55:10.186335Z",
-     "shell.execute_reply.started": "2024-04-29T02:55:01.238122Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\") \n",
-    "\n",
-    "\n",
-    "from model import LidarCenterNet\n",
-    "model = LidarCenterNet(config, device, config.backbone, image_architecture='regnety_032', \n",
-    "                           lidar_architecture='regnety_032', use_velocity=False)\n",
-    "model.to(device);\n",
-    "\n",
-    "model_parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
-    "params = sum([np.prod(p.size()) for p in model_parameters])\n",
-    "print ('Total trainable parameters: ', params)\n",
-    "\n",
-    "import torch.optim as optim\n",
-    "optimizer = optim.AdamW(model.parameters(), lr=1e-4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Training"
    ]
   },
@@ -3636,6 +3828,9 @@
    },
    "outputs": [],
    "source": [
+    "import torch.optim as optim\n",
+    "optimizer = optim.AdamW(model.parameters(), lr=1e-4)\n",
+    "\n",
     "N_EPOCHS = 3\n",
     "\n",
     "detailed_weights = {key: config.detailed_losses_weights[idx] for idx, key in enumerate(config.detailed_losses)}\n",
@@ -3693,13 +3888,6 @@
     "                  xaxis_title='Epoch', yaxis_title='Loss components')    \n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
