--- a/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output-3D.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/visualize-transfuser-output-3D.ipynb
@@ -8,12 +8,9 @@
    "source": [
     "import os\n",
     "import cv2\n",
-    "import random\n",
-    "import scipy as sp\n",
+    "import matplotlib\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.gridspec import GridSpec\n",
     "np.set_printoptions(suppress=True, precision=5)\n",
     "\n",
     "# dl imports\n",
@@ -21,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,6 +105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,6 +305,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
