e2e routes description; extraction logic

--- a/End_to_End_Autonomous_Driving/notebooks/extract-new-dataset.ipynb
+++ b/End_to_End_Autonomous_Driving/notebooks/extract-new-dataset.ipynb
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21it [00:00, 485.75it/s]\n",
-      "51it [00:00, 304.30it/s]\n",
-      "0it [00:00, ?it/s]"
+      "21it [00:00, 745.81it/s]\n",
+      "51it [00:00, 761.25it/s]\n",
+      "43it [00:00, 429.98it/s]"
      ]
     },
     {
@@ -80,19 +80,152 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "56it [00:00, 417.64it/s]\n",
+      "18it [00:00, 389.51it/s]\n",
+      "33it [00:00, 329.73it/s]\n",
+      "0it [00:00, ?it/s]"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/surya/Downloads/Town10HD_Scenario10/Town10HD_Scenario10_route1_08_18_08_55_09/depth/0066.png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-15e69711ee72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mnewIdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moldIdx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindicesToExtract\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         shutil.copyfile(os.path.join(inputRootDir, *[matchingInputFolder, 'depth', f\"{str(oldIdx).zfill(4)}.png\"]), \n\u001b[0;32m---> 23\u001b[0;31m                         os.path.join(outputRouteDir, *[ 'depth', f\"{str(newIdx).zfill(4)}.png\"]))\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         shutil.copyfile(os.path.join(inputRootDir, *[matchingInputFolder, 'label_raw', f\"{str(oldIdx).zfill(4)}.json\"]), \n",
-      "\u001b[0;32m~/miniconda3/envs/tfuse/lib/python3.7/shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msymlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 120\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfsrc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    121\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfdst\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m                 \u001b[0mcopyfileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/surya/Downloads/Town10HD_Scenario10/Town10HD_Scenario10_route1_08_18_08_55_09/depth/0066.png'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56 files copied for route2\n",
+      "18 files copied for route3\n",
+      "33 files copied for route4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "112it [00:00, 340.83it/s]\n",
+      "19it [00:00, 325.63it/s]\n",
+      "32it [00:00, 331.63it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112 files copied for route5\n",
+      "19 files copied for route6\n",
+      "32 files copied for route8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "37it [00:00, 328.81it/s]\n",
+      "52it [00:00, 324.61it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37 files copied for route9\n",
+      "52 files copied for route10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "47it [00:00, 343.82it/s]\n",
+      "25it [00:00, 364.54it/s]\n",
+      "9it [00:00, 87.05it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47 files copied for route11\n",
+      "25 files copied for route12\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "37it [00:00, 198.19it/s]\n",
+      "36it [00:00, 355.06it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37 files copied for route13\n",
+      "36 files copied for route14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "44it [00:00, 350.73it/s]\n",
+      "25it [00:00, 365.60it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 files copied for route15\n",
+      "25 files copied for route16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "35it [00:00, 180.18it/s]\n",
+      "14it [00:00, 365.65it/s]\n",
+      "21it [00:00, 365.43it/s]\n",
+      "27it [00:00, 353.59it/s]\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35 files copied for route17\n",
+      "14 files copied for route18\n",
+      "21 files copied for route19\n",
+      "27 files copied for route20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20it [00:00, 301.28it/s]\n",
+      "20it [00:00, 364.07it/s]\n",
+      "16it [00:00, 357.94it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 files copied for route21\n",
+      "20 files copied for route22\n",
+      "16 files copied for route23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -141,55 +274,6 @@
     "        \n",
     "    print(f\"{len(indicesToExtract)} files copied for {routeCol}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
